// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with mandatory props 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin-bottom: 64px;
  }
}

.emotion-2 {
  margin-bottom: 24px;
}

@media screen {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    display: block;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-32px/2);
  margin-right: calc(-32px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-8 {
    max-width: 100%;
  }
}

.emotion-9 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3184027777777778em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5684027777777778em;
}

.emotion-10 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-10 svg {
  fill: #162740;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #148F39;
  border-radius: 20rem;
}

.emotion-13 svg {
  width: 16px;
  height: 16px;
}

.emotion-13 svg {
  fill: #FFFFFF;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

.emotion-16 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3184027777777778em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5684027777777778em;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-17 {
    max-width: 100%;
  }
}

.emotion-18 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-21 {
    max-width: 100%;
  }
}

.emotion-25 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-25 svg {
  fill: #577FFB;
}

.emotion-25:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-25:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-25:active:not(:disabled) {
  color: #213A82;
}

.emotion-25:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-25:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-25:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-25 {
    vertical-align: text-bottom;
  }
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-28 {
  margin: 0;
  padding: 1px 0;
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-28::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4434027777777778em;
}

.emotion-28::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4746527777777778em;
}

.emotion-30 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-30.emotion-30 {
  width: 16px;
  height: 16px;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-33 {
    max-width: 100%;
  }
}

.emotion-35 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-35 svg {
  width: 24px;
  height: 24px;
}

.emotion-35 svg {
  fill: #555E74;
}

.emotion-35:hover:not(:disabled) {
  background-color: #E4E4E4;
  border-color: #243853;
}

.emotion-35:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-35:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-35:disabled svg {
  fill: #BBC3C9;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-37 {
    max-width: 100%;
  }
}

.emotion-38 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-40 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-40::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2549107142857143em + 1.2px);
}

.emotion-40::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5049107142857143em;
}

@media screen {
  .emotion-41 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-41 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-41 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-41 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-41 {
    display: none;
  }
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-81 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <section
                      class="emotion-9"
                    >
                      <h1
                        class="nk-headline-heading emotion-10"
                      >
                        Status
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-14"
                        >
                          <div
                            class="emotion-15"
                          >
                            <span
                              class="emotion-16"
                            >
                              Supported
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-17"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-18"
                  data-testid="divider"
                />
              </div>
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-21"
                  >
                    <section
                      class="emotion-9"
                    >
                      <h1
                        class="nk-headline-heading emotion-10"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-21"
                  >
                    <a
                      class="emotion-25"
                      href="http://localhost:8081"
                    >
                      <span
                        class="emotion-26"
                      >
                        <span
                          class="emotion-15"
                        >
                          <span
                            class="emotion-28"
                          >
                            v0.1
                          </span>
                        </span>
                        <span
                          class="emotion-15"
                        >
                          <svg
                            class="emotion-30 emotion-31"
                            fill="currentColor"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              External link
                            </title>
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-32"
            >
              <div
                class="emotion-33"
              >
                <div
                  class="emotion-12"
                >
                  <a
                    class="emotion-35"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-38"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-37"
                      >
                        <span
                          class="emotion-40"
                        >
                          View source code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-41"
        >
          <div
            class="emotion-42"
          >
            <div
              class="emotion-21"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    <div
                      class="emotion-8"
                    >
                      <section
                        class="emotion-9"
                      >
                        <h1
                          class="nk-headline-heading emotion-10"
                        >
                          Status
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-14"
                          >
                            <div
                              class="emotion-15"
                            >
                              <span
                                class="emotion-16"
                              >
                                Supported
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-17"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-18"
                    data-testid="divider"
                  />
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-20"
                  >
                    <div
                      class="emotion-21"
                    >
                      <section
                        class="emotion-9"
                      >
                        <h1
                          class="nk-headline-heading emotion-10"
                        >
                          Introduced
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-21"
                    >
                      <a
                        class="emotion-25"
                        href="http://localhost:8081"
                      >
                        <span
                          class="emotion-26"
                        >
                          <span
                            class="emotion-15"
                          >
                            <span
                              class="emotion-28"
                            >
                              v0.1
                            </span>
                          </span>
                          <span
                            class="emotion-15"
                          >
                            <svg
                              class="emotion-30 emotion-31"
                              fill="currentColor"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                External link
                              </title>
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-21"
            >
              <div
                class="emotion-32"
              >
                <div
                  class="emotion-33"
                >
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="emotion-35"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="emotion-36"
                      >
                        <div
                          class="emotion-37"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-38"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-37"
                        >
                          <span
                            class="emotion-40"
                          >
                            View source code
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        aria-hidden="true"
        class="emotion-81"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and figma button 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin-bottom: 64px;
  }
}

.emotion-2 {
  margin-bottom: 24px;
}

@media screen {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    display: block;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-32px/2);
  margin-right: calc(-32px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-8 {
    max-width: 100%;
  }
}

.emotion-9 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3184027777777778em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5684027777777778em;
}

.emotion-10 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-10 svg {
  fill: #162740;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #148F39;
  border-radius: 20rem;
}

.emotion-13 svg {
  width: 16px;
  height: 16px;
}

.emotion-13 svg {
  fill: #FFFFFF;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

.emotion-16 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3184027777777778em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5684027777777778em;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-17 {
    max-width: 100%;
  }
}

.emotion-18 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-21 {
    max-width: 100%;
  }
}

.emotion-25 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-25 svg {
  fill: #577FFB;
}

.emotion-25:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-25:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-25:active:not(:disabled) {
  color: #213A82;
}

.emotion-25:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-25:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-25:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-25 {
    vertical-align: text-bottom;
  }
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-28 {
  margin: 0;
  padding: 1px 0;
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-28::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4434027777777778em;
}

.emotion-28::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4746527777777778em;
}

.emotion-30 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-30.emotion-30 {
  width: 16px;
  height: 16px;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-33 {
    max-width: 100%;
  }
}

.emotion-35 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-35 svg {
  width: 24px;
  height: 24px;
}

.emotion-35 svg {
  fill: #555E74;
}

.emotion-35:hover:not(:disabled) {
  background-color: #E4E4E4;
  border-color: #243853;
}

.emotion-35:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-35:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-35:disabled svg {
  fill: #BBC3C9;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-37 {
    max-width: 100%;
  }
}

.emotion-38 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-40 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-40::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2549107142857143em + 1.2px);
}

.emotion-40::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5049107142857143em;
}

.emotion-43 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 176px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-43 svg {
  width: 24px;
  height: 24px;
}

.emotion-43 svg {
  fill: #555E74;
}

.emotion-43:hover:not(:disabled) {
  background-color: #E4E4E4;
  border-color: #243853;
}

.emotion-43:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-43:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-43:disabled svg {
  fill: #BBC3C9;
}

@media screen {
  .emotion-49 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-49 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-49 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-49 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-49 {
    display: none;
  }
}

.emotion-50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-97 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <section
                      class="emotion-9"
                    >
                      <h1
                        class="nk-headline-heading emotion-10"
                      >
                        Status
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-14"
                        >
                          <div
                            class="emotion-15"
                          >
                            <span
                              class="emotion-16"
                            >
                              Supported
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-17"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-18"
                  data-testid="divider"
                />
              </div>
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-21"
                  >
                    <section
                      class="emotion-9"
                    >
                      <h1
                        class="nk-headline-heading emotion-10"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-21"
                  >
                    <a
                      class="emotion-25"
                      href="http://localhost:8081"
                    >
                      <span
                        class="emotion-26"
                      >
                        <span
                          class="emotion-15"
                        >
                          <span
                            class="emotion-28"
                          >
                            v0.1
                          </span>
                        </span>
                        <span
                          class="emotion-15"
                        >
                          <svg
                            class="emotion-30 emotion-31"
                            fill="currentColor"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              External link
                            </title>
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-32"
            >
              <div
                class="emotion-33"
              >
                <div
                  class="emotion-12"
                >
                  <a
                    class="emotion-35"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-38"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-37"
                      >
                        <span
                          class="emotion-40"
                        >
                          View source code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="emotion-33"
              >
                <div
                  class="emotion-12"
                >
                  <a
                    class="emotion-43"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-38"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                            fill="#1ABCFE"
                          />
                          <path
                            d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                            fill="#0ACF83"
                          />
                          <path
                            d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                            fill="#FF7262"
                          />
                          <path
                            d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                            fill="#F24E1E"
                          />
                          <path
                            d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                            fill="#A259FF"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-37"
                      >
                        <span
                          class="emotion-40"
                        >
                          View Design
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-49"
        >
          <div
            class="emotion-50"
          >
            <div
              class="emotion-21"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    <div
                      class="emotion-8"
                    >
                      <section
                        class="emotion-9"
                      >
                        <h1
                          class="nk-headline-heading emotion-10"
                        >
                          Status
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-8"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-14"
                          >
                            <div
                              class="emotion-15"
                            >
                              <span
                                class="emotion-16"
                              >
                                Supported
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-17"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-18"
                    data-testid="divider"
                  />
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-20"
                  >
                    <div
                      class="emotion-21"
                    >
                      <section
                        class="emotion-9"
                      >
                        <h1
                          class="nk-headline-heading emotion-10"
                        >
                          Introduced
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-21"
                    >
                      <a
                        class="emotion-25"
                        href="http://localhost:8081"
                      >
                        <span
                          class="emotion-26"
                        >
                          <span
                            class="emotion-15"
                          >
                            <span
                              class="emotion-28"
                            >
                              v0.1
                            </span>
                          </span>
                          <span
                            class="emotion-15"
                          >
                            <svg
                              class="emotion-30 emotion-31"
                              fill="currentColor"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                External link
                              </title>
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-21"
            >
              <div
                class="emotion-32"
              >
                <div
                  class="emotion-33"
                >
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="emotion-35"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="emotion-36"
                      >
                        <div
                          class="emotion-37"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-38"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-37"
                        >
                          <span
                            class="emotion-40"
                          >
                            View source code
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-33"
                >
                  <div
                    class="emotion-12"
                  >
                    <a
                      class="emotion-43"
                      data-testid="buttonLink"
                      href="https://github.com/newscorp-ghfb/ncu-newskit"
                    >
                      <div
                        class="emotion-36"
                      >
                        <div
                          class="emotion-37"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-38"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                              fill="#1ABCFE"
                            />
                            <path
                              d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                              fill="#0ACF83"
                            />
                            <path
                              d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                              fill="#FF7262"
                            />
                            <path
                              d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                              fill="#F24E1E"
                            />
                            <path
                              d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                              fill="#A259FF"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-37"
                        >
                          <span
                            class="emotion-40"
                          >
                            View Design
                          </span>
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        aria-hidden="true"
        class="emotion-97"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;
